New project name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "z2m2homie"
+name = "zigbeestuff"
 version = "0.1.0"
 authors = ["Aria Stewart <aredridel@dinhe.net>"]
 edition = "2018"
